; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_svm.c_is_cr_intercept.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_svm.c_is_cr_intercept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vcpu_svm = type { i32 }
%struct.vmcb = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vcpu_svm*, i32)* @is_cr_intercept to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_cr_intercept(%struct.vcpu_svm* %0, i32 %1) #0 {
  %3 = alloca %struct.vcpu_svm*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.vmcb*, align 8
  store %struct.vcpu_svm* %0, %struct.vcpu_svm** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.vcpu_svm*, %struct.vcpu_svm** %3, align 8
  %7 = call %struct.vmcb* @get_host_vmcb(%struct.vcpu_svm* %6)
  store %struct.vmcb* %7, %struct.vmcb** %5, align 8
  %8 = load %struct.vmcb*, %struct.vmcb** %5, align 8
  %9 = getelementptr inbounds %struct.vmcb, %struct.vmcb* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %4, align 4
  %13 = shl i32 1, %12
  %14 = and i32 %11, %13
  ret i32 %14
}

declare dso_local %struct.vmcb* @get_host_vmcb(%struct.vcpu_svm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
